syntax = "proto3";

import "go.pedge.io/protolog/protolog.proto";

package btrfs;

message SubvolumeCreate {
  option (protolog.event) = true;
  string path = 1;
  string error = 2;
}

message SubvolumeDelete {
  option (protolog.event) = true;
  string path = 1;
  string error = 2;
}

message SubvolumeExists {
  option (protolog.event) = true;
  string path = 1;
  bool result = 2;
}

message SubvolumeSnapshot {
  option (protolog.event) = true;
  string src = 1;
  string dest = 2;
  bool readOnly = 3;
  string error = 4;
}

message TransID {
  option (protolog.event) = true;
  string path = 1;
  string result = 2;
  string error = 3;
}

message SubvolumeList {
  option (protolog.event) = true;
  string path = 1;
  string fromCommit = 2;
  bool ascending = 3;
  string error = 4;
}

message SubvolumeListLine {
  option (protolog.event) = true;
  string line = 1;
}

message SubvolumeFindNew {
  option (protolog.event) = true;
  string commit = 1;
  string fromCommit = 2;
  string error = 3;
}

message SubvolumeFindNewLine {
  option (protolog.event) = true;
  string line = 1;
}

message Send {
  option (protolog.event) = true;
  string path = 1;
  string parent = 2;
  string error = 3;
}

message Recv {
  option (protolog.event) = true;
  string path = 1;
  string error = 2;
}
